# ZenFile

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
assets/Slot-Spectrum-Light-Icons/Slot-Spectrum-Light-Icons/: index.theme
src/: main.rs  state.rs  theme.rs
src/ui_layout/: common.rs  dialogs.rs  file_list.rs  navigation.rs  preview.rs  sidebar.rs  status_bar.rs  title_bar.rs
